[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oul"
version = "0.3.0"
description = "Minimal Objective Under Load CLI audit tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
oul = "oul.cli:main"

[tool.setuptools.packages.find]
include = ["oul*"]
